@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)nii.c	1.26 (gritter) 4/3/06
+ * Sccsid @(#)nii.c	1.27 (gritter) 4/17/06
  */
 
 /*
@@ -170,3 +170,4 @@ int	lastrq;
 long	realpage;
 int	tryglf;
 char	*gchtab;
+int	tailflg;
