@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)tdef.h	1.73 (gritter) 4/14/06
+ * Sccsid @(#)tdef.h	1.74 (gritter) 4/17/06
  */
 
 /*
@@ -253,6 +253,8 @@ endif NROFF
 #define	iscopy(n)	((n) & COPYBIT)
 #define	AUTOLIG		(01ULL << 29)	/* ligature substituted automatically */
 #define	islig(n)	((n) & AUTOLIG)
+#define	TAILBIT		(01ULL << 29)	/* tail recursion */
+#define	istail(n)	(((n) & (AUTOLIG|'\n')) == (AUTOLIG|'\n'))
 #define	DIBIT		(01ULL << 28)	/* written in a diversion */
 #define	isdi(n)		((n) & DIBIT)
 
@@ -289,6 +291,8 @@ endif NROFF
 #define	isblbit(n)	((n) & BLBIT)
 #define	COPYBIT	0x20000000	 /* wide character in copy mode */
 #define	iscopy(n)	((n) & COPYBIT)
+#define	TAILBIT	0x10000000	/* tail recursion */
+#define	istail(n)	(((n) & (AUTOLIG|'\n')) == (AUTOLIG|'\n'))
 #define	ABSCHAR		0400	/* absolute char number in this font */
 #define	AUTOLIG	0		/* ligature substituted automatically */
 #define	islig(n)	((n) ? 0 : 0)
@@ -517,6 +521,7 @@ struct	s {	/* stack frame */
 	int	lastpbp;
 	int	mname;
 	int	frame_cnt;
+	int	tail_cnt;
 };
 
 extern struct contab {
